Se agregaron cambios en los componentes html

--- a/src/app/modulo-inventario/productos/productos.component.html
+++ b/src/app/modulo-inventario/productos/productos.component.html
@@ -1,5 +1,4 @@
 
-<p>"Bienvenido a Productos"</p>
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h2 class="h2">Lista de Productos</h2>
@@ -7,18 +6,18 @@
 
 <div class="table-responsive">
 
-<table class="table table-bordered border-primary">
+<table class="table table-striped table-sm">
   <thead>
     <tr>
-      <th scope="col">cod</th>
-            <th scope="col">tipo</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">precio</th>
-            <th scope="col">Imagen</th>
-            <th scope="col">vida util</th>
-            <th scope="col">descripcion</th>
-            <th scope="col">presentacion</th>
-            <th scope="col">vencimiento</th>
+      <th scope="col">COD</th>
+            <th scope="col">TIPO</th>
+            <th scope="col">NONMBR</th>
+            <th scope="col">PRECIO</th>
+            <th scope="col">IMAGEN</th>
+            <th scope="col">VIDA UTIL</th>
+            <th scope="col">DESCRIPCION</th>
+            <th scope="col">PRESENTACION</th>
+            <th scope="col">VENCIMIENTO</th>
     </tr>
   </thead>
   <tbody>
