--- a/src/app/modulo-inventario/inventario/inventario.component.html
+++ b/src/app/modulo-inventario/inventario/inventario.component.html
@@ -1,14 +1,14 @@
-<p>Bienvenido a Inventario!</p>
+
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h2 class="h2">Productos en Inventario</h2>
  </div>
 
 <div class="table-responsive">
 
-    <table class="table table-bordered border-primary">
+    <table class="table table-striped table-sm">
       <thead>
         <tr>
-          <th scope="col">cod</th>
+          <th scope="col">COD</th>
                 <!--<th scope="col">cod producto</th> -->                          
                 <th scope="col">EXISTENCIA</th>
                 <th scope="col">INTRODUCCION</th>
