Agregado modulo App QR

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -120,14 +120,13 @@
     </li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="true">
-        Otro Modulo
+        App QR
       </button>
       <div class="collapse" id="orders-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a href="#" class="link-dark rounded">mas</a></li>
-          <li><a href="#" class="link-dark rounded">mas</a></li>
-          <li><a href="#" class="link-dark rounded">mas</a></li>
-          <li><a href="#" class="link-dark rounded">mas</a></li>
+          <li><a routerLink="/panel/plantas" class="link-dark rounded">Plantas</a></li>
+          <li><a routerLink="/panel/codigoqr" class="link-dark rounded">Codigo Qr</a></li>
+          
         </ul>
       </div>
     </li>
